--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
-BLOCKFROST_API_KEY=preprodCDbTPKjYslKtF5kttBU0yuww35pRnAbn
-BLOCKFROST_NETWORK=preprod
+BLOCKFROST_API_KEY=mainnetkxDq3x6Tn5SaDE7VVn1OgNdovwqrCZ70
+BLOCKFROST_NETWORK=mainnet
 
 # Masumi Network Configuration (Following MIP-003 Standards)
-MASUMI_REGISTRY_URL=https://cardano-preprod.blockfrost.io/api/v0
+MASUMI_REGISTRY_URL=https://cardano-mainnet.blockfrost.io/api/v0
 MASUMI_PAYMENT_URL=http://localhost:8081/api/v1
 
 DATABASE_URL=sqlite:///./cardano_navigator.db
