Enhanced Ui and backend functionalities

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
-**/__pycache__/
-**/*.pyc/
-**/venv/
-**/node_modules/
-**/.next/
-**/package-lock.json/
+__pycache__/
+*.pyc
+venv/
+.env
+.env.*
+node_modules/
+.next/
+package-lock.json
+dist/
+build/
+coverage/
+outputs/
+*.log
+*.DS_Store
+*.swp
